Fix: Stylelint compliance for base and typography styles in themes.

--- a/src/themes/base/animations/entrances/_puff.scss
+++ b/src/themes/base/animations/entrances/_puff.scss
@@ -5,18 +5,19 @@
  */
 
 @mixin puff-in-center {
-  @include keyframes(puff-in-center) {
-    0% {
-      transform: scale(2);
-      filter: blur(2px);
-      opacity: 0;
+    @include keyframes(puff-in-center) {
+        0% {
+            transform: scale(2);
+            filter: blur(2px);
+            opacity: 0;
+        }
+
+        100% {
+            transform: scale(1);
+            filter: blur(0);
+            opacity: 1;
+        }
     }
-    100% {
-      transform: scale(1);
-      filter: blur(0px);
-      opacity: 1;
-    }
-  }
 }
 
 
@@ -27,20 +28,21 @@
  */
 
 @mixin puff-in-top {
-  @include keyframes(puff-in-top) {
-    0% {
-      transform: scale(2);
-      transform-origin: 50% 0%;
-      filter: blur(2px);
-      opacity: 0;
+    @include keyframes(puff-in-top) {
+        0% {
+            transform: scale(2);
+            transform-origin: 50% 0%;
+            filter: blur(2px);
+            opacity: 0;
+        }
+
+        100% {
+            transform: scale(1);
+            transform-origin: 50% 0%;
+            filter: blur(0);
+            opacity: 1;
+        }
     }
-    100% {
-      transform: scale(1);
-      transform-origin: 50% 0%;
-      filter: blur(0px);
-      opacity: 1;
-    }
-  }
 }
 
 
@@ -51,20 +53,21 @@
  */
 
 @mixin puff-in-tr {
-  @include keyframes(puff-in-tr) {
-    0% {
-      transform: scale(2);
-      transform-origin: 100% 0%;
-      filter: blur(2px);
-      opacity: 0;
+    @include keyframes(puff-in-tr) {
+        0% {
+            transform: scale(2);
+            transform-origin: 100% 0%;
+            filter: blur(2px);
+            opacity: 0;
+        }
+
+        100% {
+            transform: scale(1);
+            transform-origin: 100% 0%;
+            filter: blur(0);
+            opacity: 1;
+        }
     }
-    100% {
-      transform: scale(1);
-      transform-origin: 100% 0%;
-      filter: blur(0px);
-      opacity: 1;
-    }
-  }
 }
 
 
@@ -75,20 +78,21 @@
  */
 
 @mixin puff-in-right {
-  @include keyframes(puff-in-right) {
-    0% {
-      transform: scale(2);
-      transform-origin: 100% 50%;
-      filter: blur(2px);
-      opacity: 0;
+    @include keyframes(puff-in-right) {
+        0% {
+            transform: scale(2);
+            transform-origin: 100% 50%;
+            filter: blur(2px);
+            opacity: 0;
+        }
+
+        100% {
+            transform: scale(1);
+            transform-origin: 100% 50%;
+            filter: blur(0);
+            opacity: 1;
+        }
     }
-    100% {
-      transform: scale(1);
-      transform-origin: 100% 50%;
-      filter: blur(0px);
-      opacity: 1;
-    }
-  }
 }
 
 
@@ -99,20 +103,21 @@
  */
 
 @mixin puff-in-br {
-  @include keyframes(puff-in-br) {
-    0% {
-      transform: scale(2);
-      transform-origin: 100% 100%;
-      filter: blur(2px);
-      opacity: 0;
+    @include keyframes(puff-in-br) {
+        0% {
+            transform: scale(2);
+            transform-origin: 100% 100%;
+            filter: blur(2px);
+            opacity: 0;
+        }
+
+        100% {
+            transform: scale(1);
+            transform-origin: 100% 100%;
+            filter: blur(0);
+            opacity: 1;
+        }
     }
-    100% {
-      transform: scale(1);
-      transform-origin: 100% 100%;
-      filter: blur(0px);
-      opacity: 1;
-    }
-  }
 }
 
 
@@ -123,20 +128,21 @@
  */
 
 @mixin puff-in-bottom {
-  @include keyframes(puff-in-bottom) {
-    0% {
-      transform: scale(2);
-      transform-origin: 50% 100%;
-      filter: blur(2px);
-      opacity: 0;
+    @include keyframes(puff-in-bottom) {
+        0% {
+            transform: scale(2);
+            transform-origin: 50% 100%;
+            filter: blur(2px);
+            opacity: 0;
+        }
+
+        100% {
+            transform: scale(1);
+            transform-origin: 50% 100%;
+            filter: blur(0);
+            opacity: 1;
+        }
     }
-    100% {
-      transform: scale(1);
-      transform-origin: 50% 100%;
-      filter: blur(0px);
-      opacity: 1;
-    }
-  }
 }
 
 
@@ -147,20 +153,21 @@
  */
 
 @mixin puff-in-bl {
-  @include keyframes(puff-in-bl) {
-    0% {
-      transform: scale(2);
-      transform-origin: 0% 100%;
-      filter: blur(2px);
-      opacity: 0;
+    @include keyframes(puff-in-bl) {
+        0% {
+            transform: scale(2);
+            transform-origin: 0% 100%;
+            filter: blur(2px);
+            opacity: 0;
+        }
+
+        100% {
+            transform: scale(1);
+            transform-origin: 0% 100%;
+            filter: blur(0);
+            opacity: 1;
+        }
     }
-    100% {
-      transform: scale(1);
-      transform-origin: 0% 100%;
-      filter: blur(0px);
-      opacity: 1;
-    }
-  }
 }
 
 
@@ -171,20 +178,21 @@
  */
 
 @mixin puff-in-left {
-  @include keyframes(puff-in-left) {
-    0% {
-      transform: scale(2);
-      transform-origin: 0% 50%;
-      filter: blur(2px);
-      opacity: 0;
+    @include keyframes(puff-in-left) {
+        0% {
+            transform: scale(2);
+            transform-origin: 0% 50%;
+            filter: blur(2px);
+            opacity: 0;
+        }
+
+        100% {
+            transform: scale(1);
+            transform-origin: 0% 50%;
+            filter: blur(0);
+            opacity: 1;
+        }
     }
-    100% {
-      transform: scale(1);
-      transform-origin: 0% 50%;
-      filter: blur(0px);
-      opacity: 1;
-    }
-  }
 }
 
 
@@ -195,20 +203,21 @@
  */
 
 @mixin puff-in-tl {
-  @include keyframes(puff-in-tl) {
-    0% {
-      transform: scale(2);
-      transform-origin: 0% 0%;
-      filter: blur(2px);
-      opacity: 0;
+    @include keyframes(puff-in-tl) {
+        0% {
+            transform: scale(2);
+            transform-origin: 0% 0%;
+            filter: blur(2px);
+            opacity: 0;
+        }
+
+        100% {
+            transform: scale(1);
+            transform-origin: 0% 0%;
+            filter: blur(0);
+            opacity: 1;
+        }
     }
-    100% {
-      transform: scale(1);
-      transform-origin: 0% 0%;
-      filter: blur(0px);
-      opacity: 1;
-    }
-  }
 }
 
 
@@ -219,18 +228,19 @@
  */
 
 @mixin puff-in-hor {
-  @include keyframes(puff-in-hor) {
-    0% {
-      transform: scaleX(2);
-      filter: blur(2px);
-      opacity: 0;
+    @include keyframes(puff-in-hor) {
+        0% {
+            transform: scaleX(2);
+            filter: blur(2px);
+            opacity: 0;
+        }
+
+        100% {
+            transform: scaleX(1);
+            filter: blur(0);
+            opacity: 1;
+        }
     }
-    100% {
-      transform: scaleX(1);
-      filter: blur(0px);
-      opacity: 1;
-    }
-  }
 }
 
 
@@ -241,16 +251,17 @@
  */
 
 @mixin puff-in-ver {
-  @include keyframes(puff-in-ver) {
-    0% {
-      transform: scaleY(2);
-      filter: blur(2px);
-      opacity: 0;
+    @include keyframes(puff-in-ver) {
+        0% {
+            transform: scaleY(2);
+            filter: blur(2px);
+            opacity: 0;
+        }
+
+        100% {
+            transform: scaleY(1);
+            filter: blur(0);
+            opacity: 1;
+        }
     }
-    100% {
-      transform: scaleY(1);
-      filter: blur(0px);
-      opacity: 1;
-    }
-  }
 }
