--- a/src/themes/base/animations/exits/_puff.scss
+++ b/src/themes/base/animations/exits/_puff.scss
@@ -8,9 +8,10 @@
     @include keyframes (puff-out-center) {
         0% {
             transform: scale(1);
-            filter: blur(0px);
+            filter: blur(0);
             opacity: 1;
         }
+
         100% {
             transform: scale(2);
             filter: blur(2px);
@@ -31,9 +32,10 @@
         0% {
             transform: scale(1);
             transform-origin: 50% 0%;
-            filter: blur(0px);
+            filter: blur(0);
             opacity: 1;
         }
+
         100% {
             transform: scale(2);
             transform-origin: 50% 0%;
@@ -55,9 +57,10 @@
         0% {
             transform: scale(1);
             transform-origin: 100% 0%;
-            filter: blur(0px);
+            filter: blur(0);
             opacity: 1;
         }
+
         100% {
             transform: scale(2);
             transform-origin: 100% 0%;
@@ -79,9 +82,10 @@
         0% {
             transform: scale(1);
             transform-origin: 100% 50%;
-            filter: blur(0px);
+            filter: blur(0);
             opacity: 1;
         }
+
         100% {
             transform: scale(2);
             transform-origin: 100% 50%;
@@ -103,9 +107,10 @@
         0% {
             transform: scale(1);
             transform-origin: 100% 100%;
-            filter: blur(0px);
+            filter: blur(0);
             opacity: 1;
         }
+
         100% {
             transform: scale(2);
             transform-origin: 100% 100%;
@@ -127,9 +132,10 @@
         0% {
             transform: scale(1);
             transform-origin: 50% 100%;
-            filter: blur(0px);
+            filter: blur(0);
             opacity: 1;
         }
+
         100% {
             transform: scale(2);
             transform-origin: 50% 100%;
@@ -150,9 +156,10 @@
     @include keyframes (puff-out-ver) {
         0% {
             transform: scaleY(1);
-            filter: blur(0px);
+            filter: blur(0);
             opacity: 1;
         }
+
         100% {
             transform: scaleY(2);
             filter: blur(2px);
@@ -172,9 +179,10 @@
     @include keyframes (puff-out-hor) {
         0% {
             transform: scaleX(1);
-            filter: blur(0px);
+            filter: blur(0);
             opacity: 1;
         }
+
         100% {
             transform: scaleX(2);
             filter: blur(2px);
@@ -195,9 +203,10 @@
         0% {
             transform: scale(1);
             transform-origin: 0% 0%;
-            filter: blur(0px);
+            filter: blur(0);
             opacity: 1;
         }
+
         100% {
             transform: scale(2);
             transform-origin: 0% 0%;
@@ -219,9 +228,10 @@
         0% {
             transform: scale(1);
             transform-origin: 0% 50%;
-            filter: blur(0px);
+            filter: blur(0);
             opacity: 1;
         }
+
         100% {
             transform: scale(2);
             transform-origin: 0% 50%;
@@ -243,9 +253,10 @@
         0% {
             transform: scale(1);
             transform-origin: 0% 100%;
-            filter: blur(0px);
+            filter: blur(0);
             opacity: 1;
         }
+
         100% {
             transform: scale(2);
             transform-origin: 0% 100%;
