--- a/src/themes/base/_normalize.scss
+++ b/src/themes/base/_normalize.scss
@@ -28,9 +28,10 @@ html {
         *font-size: 100%; /* 3 */
     }
 }
+
 *,
-*:before,
-*:after {
+*::before,
+*::after {
     box-sizing: border-box;
 }
 /**
@@ -113,14 +114,7 @@ template {
 
 a {
     background-color: transparent;
-}
 
-/**
- * Improve readability of focused elements when they are also in an
- * active/hover state.
- */
-
-a {
     &:active,
     &:hover {
         outline: 0;
@@ -144,7 +138,7 @@ abbr[title] {
 
 b,
 strong {
-    font-weight: bold;
+    font-weight: 600;
 }
 
 @if $legacy_browser_support {
@@ -168,13 +162,13 @@ dfn {
 
 h1 {
     font-size: 2em;
-    margin: 0.67em 0;
+    margin: .67em 0;
 }
 
 @if $legacy_browser_support {
     h2 {
         font-size: 1.5em;
-        margin: 0.83em 0;
+        margin: .83em 0;
     }
 
     h3 {
@@ -188,12 +182,12 @@ h1 {
     }
 
     h5 {
-        font-size: 0.83em;
+        font-size: .83em;
         margin: 1.67em 0;
     }
 
     h6 {
-        font-size: 0.67em;
+        font-size: .67em;
         margin: 2.33em 0;
     }
 }
@@ -229,10 +223,9 @@ mark {
    * Addresses `quotes` property not supported in Safari 4.
    */
 
-    q:before,
-    q:after {
+    q::before,
+    q::after {
         content: '';
-        content: none;
     }
 }
 
@@ -257,11 +250,11 @@ sup {
 }
 
 sup {
-    top: -0.5em;
+    top: -.5em;
 }
 
 sub {
-    bottom: -0.25em;
+    bottom: -.25em;
 }
 
 @if $legacy_browser_support {
@@ -365,7 +358,7 @@ code,
 kbd,
 pre,
 samp {
-    font-family: monospace, monospace;
+    font-family: monospace;
     @if $legacy_browser_support {
         _font-family: 'courier new', monospace;
     }
@@ -398,7 +391,6 @@ textarea {
     margin: 0; /* 3 */
     @if $legacy_browser_support {
         vertical-align: baseline; /* 3 */
-        *vertical-align: middle; /* 3 */
     }
 }
 
@@ -433,10 +425,10 @@ select {
  */
 
 button,
-html input[type="button"],
+html input[type='button'],
 /* 1 */
-input[type="reset"],
-input[type="submit"] {
+input[type='reset'],
+input[type='submit'] {
     -webkit-appearance: button; /* 2 */
     cursor: pointer; /* 3 */
     @if $legacy_browser_support {
@@ -478,8 +470,8 @@ input {
  *  Known issue: excess padding remains in IE 6.
  */
 
-input[type="checkbox"],
-input[type="radio"] {
+input[type='checkbox'],
+input[type='radio'] {
     box-sizing: border-box; /* 1 */
     padding: 0; /* 2 */
     @if $legacy_browser_support {
@@ -494,8 +486,8 @@ input[type="radio"] {
  * decrement button to change from `default` to `text`.
  */
 
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
     height: auto;
 }
 
@@ -504,7 +496,7 @@ input[type="number"]::-webkit-outer-spin-button {
  * 2. Address `box-sizing` set to `border-box` in Safari and Chrome.
  */
 
-input[type="search"] {
+input[type='search'] {
     -webkit-appearance: textfield; /* 1 */
     box-sizing: content-box; /* 2 */
 }
@@ -515,8 +507,8 @@ input[type="search"] {
  * padding (and `textfield` appearance).
  */
 
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-decoration {
     -webkit-appearance: none;
 }
 
@@ -527,7 +519,7 @@ input[type="search"]::-webkit-search-decoration {
 fieldset {
     border: 1px solid #c0c0c0;
     margin: 0 2px;
-    padding: 0.35em 0.625em 0.75em;
+    padding: .35em .625em .75em;
 }
 
 /**
@@ -560,7 +552,7 @@ textarea {
  */
 
 optgroup {
-    font-weight: bold;
+    font-weight: 700;
 }
 
 /* Tables
