--- a/src/themes/typography/fonts/_material_icons.scss
+++ b/src/themes/typography/fonts/_material_icons.scss
@@ -1,20 +1,21 @@
 $font-weight: 400;
 $font-size: 24px;
 $line-height: 1;
+$icon-font: 'Material Icons';
 
 @font-face {
     font-family: 'Material Icons';
     font-style: normal;
     font-weight: $font-weight;
     src: local('Material Icons'), local('MaterialIcons-Regular'),
-    url('#{$font-path}MaterialIcons-Regular.woff2') format('woff2'),
-    url('#{$font-path}MaterialIcons-Regular.woff') format('woff'),
-    url('#{$font-path}MaterialIcons-Regular.ttf') format('truetype');
+        url('#{$font-path}MaterialIcons-Regular.woff2') format('woff2'),
+        url('#{$font-path}MaterialIcons-Regular.woff') format('woff'),
+        url('#{$font-path}MaterialIcons-Regular.ttf') format('truetype');
 }
 
 .material-icons {
     display: inline-block;
-    font-family: 'Material Icons';
+    font-family: $icon-font;
     font-weight: $font-weight;
     font-style: normal;
     font-size: $font-size;
