refactor(theming): Remove button-group encapsulated styles.
Remove the encapsulated styles for the button-group component in favor
of global themable styles.

--- a/src/themes/igniteui-angular.scss
+++ b/src/themes/igniteui-angular.scss
@@ -10,7 +10,7 @@ $exclude: (
     //igx-avatar,
     //igx-badge,
     // igx-button,
-    igx-button-group,
+    // igx-button-group,
     igx-calendar,
     igx-card,
     igx-carousel,
