refactor(theming): Move styles folder from 'src' to 'src/core'.
Move the themes folder from src to src/core and rename it to styles.

--- a/src/core/styles/base/_variables.scss
+++ b/src/core/styles/base/_variables.scss
@@ -1,6 +1,6 @@
 $browser-context: 16px !default;
 $browser-line-height: 27px !default;
-$font-path: './fonts/' !default;
+$font-path: '~./fonts/' !default;
 $keyframes: () !default;
 
 $components: () !default;
