--- a/src/core/styles/components/list/_list-theme.scss
+++ b/src/core/styles/components/list/_list-theme.scss
@@ -56,7 +56,7 @@ $components: register-component($components, #{$component-name});
     $list-item-tl-sl-font-size: em(14px) !default;
     $list-item-tl-height: em(72px) !default;
     $list-item-tl-sl-color: $darkgray !default;
-    /*$list-empty-color: set-color($list-background);*/
+    $list-empty-color: text-contrast($list-background);
     $list-empty-padding: em(16px, 16px);
 
     %igx-list {
