refactor(theming): point to new base styles location
point to index in core/styles/base/

--- a/src/slider/slider.component.scss
+++ b/src/slider/slider.component.scss
@@ -1,4 +1,4 @@
-@import "../themes/base/index";
+@import "../core/styles/base/index";
 @import "../themes/material/config";
 @import "../themes/material/extends/slider";
 
