--- a/src/scroll/scroll.component.scss
+++ b/src/scroll/scroll.component.scss
@@ -1,3 +1,3 @@
-@import "../themes/base/index";
+@import "../core/styles/base/index";
 @import "../themes/material/config";
 @import "../themes/material/extends/scroll";
