fix(navbar): ARIA role, prevent label ID constant refresh

--- a/src/navbar/navbar.component.html
+++ b/src/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="igx-navbar" role=”navigation” [attr.aria-labelledby]="titleId">
+<nav class="igx-navbar" role="navigation" [attr.aria-labelledby]="titleId">
     <div class="igx-navbar__left">
         <span class="igx-navbar__left-btn" *ngIf="!isActionButtonVisible">
             <button igxButton="navbar" (click)="_triggerAction()">
