test(styling): broken tests after styling changes

--- a/src/core/styles/themes/_core.scss
+++ b/src/core/styles/themes/_core.scss
@@ -20,7 +20,7 @@
 @import '../components/input/input-component';
 @import '../components/list/list-component';
 @import '../components/navbar/navbar-component';
-// @import '../components/navdrawer/navdrawer-component';
+@import '../components/navdrawer/navdrawer-component';
 @import '../components/progress/progress-component';
 @import '../components/radio/radio-component';
 @import '../components/ripple/ripple-component';
