--- a/src/core/styles/components/navdrawer/_navdrawer-component.scss
+++ b/src/core/styles/components/navdrawer/_navdrawer-component.scss
@@ -1,3 +1,8 @@
+$white: #fff !default;
+$ease-out-quad: cubic-bezier(.25, .46, .45, .94);
+$navdrawer-pin-collapsed-padding: 0;
+$overlay-color: rgba(0, 0, 0, .25);
+
 @include b(ig-nav-drawer) {
     position: fixed;
     width: em(242px);
@@ -15,7 +20,7 @@
     transition-duration: .3s, .3s;
     transition-timing-function: $ease-out-quad, $ease-out-quad;
     transition-delay: 0s, 0s;
-    box-shadow: $elevate-16;
+    box-shadow: rgba(0, 0, 0, .25);
 
     &.collapsed {
         transform: translate3d(-300px, 0, 0);
