refactor(theming): comment out '@debug' statements in themes styles

--- a/src/core/styles/components/avatar/_avatar-theme.scss
+++ b/src/core/styles/components/avatar/_avatar-theme.scss
@@ -14,7 +14,8 @@ $components: register-component($components, #{$component-name});
         $image-background: transparent
     );
     $this: extend($default-theme, $theme);
-    @debug $this;
+
+    // @debug $this;
 
     %igx-avatar-display {
         display: flex;
