fix(styles): broken checkbox and carousel
checkbox works as intended, and carousel active dots are now visible

--- a/src/core/styles/components/_common/_igx-control.scss
+++ b/src/core/styles/components/_common/_igx-control.scss
@@ -1,8 +1,6 @@
-$control-padding: 8px 0 !default;
-
-@include b(igx-control) {
+%igx-control-display {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: $control-padding;
+    padding: 8px 0;
 }
