Handle the grid width/height in % scenario.

--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -20,9 +20,9 @@
 </ng-template>
 
 
-<div class="igx-grid__thead" role="rowgroup">
+<div class="igx-grid__thead" role="rowgroup" [style.width.px]='calcWidth'>
     <div class="igx-grid__tr" role="row">
-        <ng-template igVirtFor let-col [igVirtForOf]="visibleColumns" [igVirtForScrolling]="'horizontal'" [igVirtForUseForScroll]="parentVirtDir" [igVirtForContainerSize]='width'>
+        <ng-template igVirtFor let-col [igVirtForOf]="visibleColumns" [igVirtForScrolling]="'horizontal'" [igVirtForUseForScroll]="parentVirtDir" [igVirtForContainerSize]='calcWidth'>
             <igx-grid-header [gridID]="id" [column]="col" [style.min-width.px]="col.width"></igx-grid-header>
         </ng-template>
     </div>
@@ -36,12 +36,12 @@
     </igx-grid-row>
 </div>-->
 
-<div class="igx-grid__tbody" role="rowgroup" [style.height]='height' [style.width]='width' >
+<div class="igx-grid__tbody" role="rowgroup" [style.height.px]='calcHeight' [style.width.px]='calcWidth' >
         <ng-template igVirtFor let-rowData [igVirtForOf]="data | gridFiltering:filteringExpressions:filteringLogic:id:pipeTrigger
                                 | gridSort:sortingExpressions:id:pipeTrigger
                                 | gridPaging:page:perPage:id:pipeTrigger" let-rowIndex="index" 
                                 [igVirtForScrolling]="'vertical'"
-                                [igVirtForContainerSize]='height'
+                                [igVirtForContainerSize]='calcHeight'
                                 [igVirtForItemSize]='"50px"'
                                 #scrollContainer>
            <igx-grid-row [gridID]="id" [index]="rowIndex" [rowData]="rowData">
