--- a/src/themes/material/extends/_grid.scss
+++ b/src/themes/material/extends/_grid.scss
@@ -6,7 +6,7 @@
     border-radius: $grid-br;
     box-shadow: $grid-shadow;
     outline-style: none;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
 }
 
 %grid-caption {
