--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="main">
     <igx-nav-drawer id="navdrawer" #navdrawer [enableGestures]="drawerState.enableGestures" [isOpen]="drawerState.open" [miniWidth]="drawerState.miniWidth"
         [(pin)]="drawerState.pin" [width]="drawerState.width" [position]="drawerState.position">
-        <div class="ig-drawer-content">
+        <div class="igx-drawer-content">
             <nav class="nav">
                 <img class="logo" src="images/rsrcs/jsblocks-logo.svg" alt="Ignite UI for Angular Logo">
 
