--- a/src/list/list-item.component.html
+++ b/src/list/list-item.component.html
@@ -1,3 +1,3 @@
-<div #wrapper class="{{innerStyle}}" [hidden]="hidden">
-  <ng-content></ng-content>
+<div #wrapper class="{{innerStyle}}">
+	<ng-content></ng-content>
 </div>
