Implementing scrollNext/scrollPrev. Adding virt-for sample.

--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -151,6 +151,10 @@
                     <igx-icon fontSet="material" name="layers"></igx-icon>
                     <span>Shadows</span>
                 </span>
+                 <span class="nav-item" [routerLinkActive]="'active'" routerLink="/virtualForDirective">
+                    <igx-icon fontSet="material" name="view_column"></igx-icon>
+                    <span>Virtual-For Directive</span>
+                </span>
             </nav>
         </div>
     </igx-nav-drawer>
