--- a/src/themes/material/extends/_avatar.scss
+++ b/src/themes/material/extends/_avatar.scss
@@ -4,6 +4,7 @@
     align-items: center;
     position: relative;
     pointer-events: none;
+    font-family: 'Titillium Web';
 }
 
 %igx-avatar--rounded {
